content/_generated-doc/2.16/config/quarkus-elytron-security-ldap.adoc

:summaryTableId: quarkus-elytron-security-ldap
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-elytron-security-ldap_configuration]]link:#quarkus-elytron-security-ldap_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-ldap_quarkus.security.ldap.enabled]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.enabled[quarkus.security.ldap.enabled]`

[.description]
--
The option to enable the ldap elytron module

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-elytron-security-ldap_quarkus.security.ldap.realm-name]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.realm-name[quarkus.security.ldap.realm-name]`

[.description]
--
The elytron realm name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_REALM_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_REALM_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`Quarkus`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.direct-verification]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.direct-verification[quarkus.security.ldap.direct-verification]`

[.description]
--
Provided credentials are verified against ldap?

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIRECT_VERIFICATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIRECT_VERIFICATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.url]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.url[quarkus.security.ldap.dir-context.url]`

[.description]
--
The url of the ldap server

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.principal]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.principal[quarkus.security.ldap.dir-context.principal]`

[.description]
--
The principal: user which is used to connect to ldap server (also named "bindDn")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_PRINCIPAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_PRINCIPAL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.password]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.password[quarkus.security.ldap.dir-context.password]`

[.description]
--
The password which belongs to the principal (also named "bindCredential")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.referral-mode]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.referral-mode[quarkus.security.ldap.dir-context.referral-mode]`

[.description]
--
how ldap redirects are handled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_REFERRAL_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_REFERRAL_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`ignore`, `follow`, `throw` 
|`ignore`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.connect-timeout]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.connect-timeout[quarkus.security.ldap.dir-context.connect-timeout]`

[.description]
--
The connect timeout

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_CONNECT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_CONNECT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5S`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.read-timeout]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.dir-context.read-timeout[quarkus.security.ldap.dir-context.read-timeout]`

[.description]
--
The read timeout

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_DIR_CONTEXT_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.rdn-identifier]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.rdn-identifier[quarkus.security.ldap.identity-mapping.rdn-identifier]`

[.description]
--
The identifier which correlates to the provided user (also named "baseFilter")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_RDN_IDENTIFIER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_RDN_IDENTIFIER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`uid`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.search-base-dn]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.search-base-dn[quarkus.security.ldap.identity-mapping.search-base-dn]`

[.description]
--
The dn where we look for users

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_SEARCH_BASE_DN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_SEARCH_BASE_DN+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.search-recursive]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.search-recursive[quarkus.security.ldap.identity-mapping.search-recursive]`

[.description]
--
If the child nodes are also searched for identities

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_SEARCH_RECURSIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_SEARCH_RECURSIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.from]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.from[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".from]`

[.description]
--
The roleAttributeId from which is mapped (e.g. "cn")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FROM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FROM+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.to]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.to[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".to]`

[.description]
--
The identifier whom the attribute is mapped to (in Quarkus: "groups", in WildFly this is "Roles")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__TO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__TO+++`
endif::add-copy-button-to-env-var[]
--|string 
|`groups`


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".filter]`

[.description]
--
The filter (also named "roleFilter")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FILTER+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter-base-dn]]`link:#quarkus-elytron-security-ldap_quarkus.security.ldap.identity-mapping.attribute-mappings.-attribute-mappings-.filter-base-dn[quarkus.security.ldap.identity-mapping.attribute-mappings."attribute-mappings".filter-base-dn]`

[.description]
--
The filter base dn (also named "rolesContextDn")

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FILTER_BASE_DN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_LDAP_IDENTITY_MAPPING_ATTRIBUTE_MAPPINGS__ATTRIBUTE_MAPPINGS__FILTER_BASE_DN+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
